--- a/index.html
+++ b/index.html
@@ -6,11 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="estilos/estilos.css">
     <title>Projeto Redes Sociais</title>
 </head>
 
 <body>
-    <h1>Ola Mundo</h1>
+    <main>
+        <section id="telefone">
+
+        </section>
+        <section id="redes">
+
+        </section>
+    </main>
 </body>
 
 </html>
